--- a/app/src/main/res/layout/activity_splash2.xml
+++ b/app/src/main/res/layout/activity_splash2.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:background="@drawable/gradient1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient1"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".onboarding.Splash2Activity">
+
 
     <LinearLayout
         android:id="@+id/fitText"
@@ -34,6 +36,7 @@
             android:textColor="@color/white"
             android:textSize="50sp"
             android:textStyle="bold" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -66,6 +69,5 @@
         android:layout_marginBottom="30dp"
         android:paddingVertical="10dp"
         app:cornerRadius="25dp" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
